nova (2012.2~f3-0ubuntu2) UNRELEASED; urgency=low

  * debian/patches/0001-Update-tools-hacking-for-pep8-1.2-and-
    beyond.patch: Dropped we dont run pep8 tests anymore.
  * debian/control: Drop pep8 build depends

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 23 Aug 2012 07:19:03 -0500

nova (2012.2~f3-0ubuntu1) quantal; urgency=low

  [ Chuck Short ]
  * New upstream version.
  * debian/rules: Re-enable testsuite.
  * debian/control:
    - Add python-quantumclient as a build depends.
    - Bump standards to 3.9.3
    - Fix lintian warnings.
    - Recommend python-glanceclient and python-keystoneclient.
    - Add dependency of iptables for nova-network.
  * debian/watch: Update
  * debian/rules: Do not run pep8 tests since upstream is still using an
    older pep8.
  * debian/patches/0001-Update-tools-hacking-for-pep8-1.2-and-
    beyond.patch: Get the testsuite running again.
  * debian/nova-volume.install, debian/nova_tgt: Add support for
    persistent volumes.

  [ Adam Gandelman ]
  * debian/{nova-api.install, nova-api-metadata.install}: Install
    api-metadata.filters. (LP: #1002111)
  * debian/control: Added python-glanceclient.

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 16 Aug 2012 14:04:11 -0500

nova (2012.2~f2-0ubuntu1) quantal; urgency=low

  [ Adam Gandelman ]
  * Use new rootwrap configuration structure:
    - debian/nova-{compute, network, volume}.{pyinstall, pyremove}: Dropped.
    - debian/nova-common.dirs: Add /etc/nova/rootwrap.d/.
    - debian/nova-common.install: Install /etc/nova/rootwrap.conf.
    - debian/debian/nova.conf: Reference rootwrap.conf in calls to
      nova-rootwrap.
    - debian/nova-{compute, network, volume}.install: Install corresponding
      filter in /etc/nova/rootwrap.d/
  * debian/rules: Install logging_sample.conf to /etc/nova/logging.conf
    as part of nova-common.
  * debian/pydist-overrides: Add setuptools-git.
  * debian/control: Add python-setuptools-git as a Build-Depends.