@@ -1,7 +1,7 @@
 description "Nova OpenStack Volume API server"
 author "Joe Heck <heckj@mac.com>"
 
-start on (filesystem and net-device-up IFACE!=lo)
+start on runlevel [2345]
 stop on runlevel [016]
 
 
