@@ -1,7 +1,7 @@
 description "Nova Console"
 author "Vishvananda Ishaya <vishvananda@gmail.com>"
 
-start on (filesystem and net-device-up IFACE!=lo)
+start on runlevel [2345]
 stop on runlevel [016]
 
 respawn
