@@ -1,7 +1,7 @@
 description "Nova scheduler"
 author "Soren Hansen <soren@linux2go.dk>"
 
-start on (filesystem and net-device-up IFACE!=lo)
+start on runlevel [2345]
 stop on runlevel [016]
 
 
