@@ -3,6 +3,8 @@ nova (2012.2~f3-0ubuntu2) UNRELEASED; urgency=low
   * debian/patches/0001-Update-tools-hacking-for-pep8-1.2-and-
     beyond.patch: Dropped we dont run pep8 tests anymore.
   * debian/control: Drop pep8 build depends
+  * debian/*.upstart.in: Make sure we transition correctly from runlevel
+    1 to 2. (LP: #820694)
 
  -- Chuck Short <zulcss@ubuntu.com>  Thu, 23 Aug 2012 07:19:03 -0500
 
